--- a/picture/index.html
+++ b/picture/index.html
@@ -8,76 +8,90 @@
 </head>
 <body>
   <div class="container">
-    <div class="sky">
-      <div class="rainbow">
-        <div class="rainbow__line red">
-          <div class="rainbow__line orange">
-            <div class="rainbow__line yellow">
-              <div class="rainbow__line green">
-                <div class="rainbow__line azure">
-                  <div class="rainbow__line blue">
-                    <div class="rainbow__line purple">
-                      </div>
+
+      <div class="sky">
+        <div class="rainbow1">
+          <div class="rainbow__line red">
+            <div class="rainbow__line orange">
+              <div class="rainbow__line yellow">
+                <div class="rainbow__line green">
+                  <div class="rainbow__line azure">
+                    <div class="rainbow__line blue">
+                      <div class="rainbow__line purple">
+                        </div>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+      </div>
+
+        <div class="clouds">
+            <div class="cloud1">
+              <div class="circul1">
+              </div>
+
+              <div class="circul2">
+              </div>
+
+              <div class="circul3">
+              </div>
+
+              <div class="circul4">
+              </div>
+            </div>
+
+            <div class="cloud2">
+              <div class="circul1">
+              </div>
+
+              <div class="circul2">
+              </div>
+
+              <div class="circul3">
+              </div>
+
+              <div class="circul4">
+              </div>
+            </div>
+          </div>
+
+          <div class="sun">
+          </div>
         </div>
+
+        <div class="earth">
+          <div class="ground">
+          </div>
+
+        <div class="bilding">
+          <div class="roof">
+            <div class="pipe"></div>
+            <div class="triangle"></div>
+            <div class="circle-window"></div>
+          </div>
+            <div class="box">
+              <div class="door">
+                <div class="doorhandle"></div>
+              </div>
+              <div class="window">
+                <div class="rectangle"></div>
+                  <div class="square"></div>
+                  <div class="square"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="fence">
+          </div>
+
+          <div class="tree">
+          </div>
       </div>
 
-      <div class="clouds">
-        <div class="cloud1">
-          <div class="circul1">
-          </div>
-
-          <div class="circul2">
-          </div>
-
-          <div class="circul3">
-          </div>
-
-          <div class="circul4">
-          </div>
-        </div>
-
-        <div class="cloud2">
-          <div class="circul1">
-          </div>
-
-          <div class="circul2">
-          </div>
-
-          <div class="circul3">
-          </div>
-
-          <div class="circul4">
-          </div>
-        </div>
+      <div class="water">
       </div>
-
-      <div class="sun">
-      </div>
-    </div>
-
-    <div class="earth">
-      <div class="ground">
-      </div>
-
-      <div class="house">
-      </div>
-
-      <div class="fence">
-      </div>
-
-      <div class="tree">
-      </div>
-    </div>
-
-    
-
-    <div class="water">
-    </div>
-  </div>
+</div>
 </body>
 </html>
