--- a/picture/index.html
+++ b/picture/index.html
@@ -77,16 +77,54 @@
               </div>
               <div class="window">
                 <div class="rectangle"></div>
+                <div>
                   <div class="square"></div>
                   <div class="square"></div>
+                </div>
               </div>
             </div>
           </div>
 
           <div class="fence">
+              <div class="board">
+                <div class="board__up"></div>
+                <div class="board__down"></div>
+              </div>
+              <div class="board">
+                <div class="board__up"></div>
+                <div class="board__down"></div>
+              </div>
+              <div class="board">
+                <div class="board__up"></div>
+                <div class="board__down"></div>
+              </div>
+              <div class="board">
+                <div class="board__up"></div>
+                <div class="board__down"></div>
+              </div>
+              <div class="board">
+                <div class="board__up"></div>
+                <div class="board__down"></div>
+              </div>
+              <div class="board">
+                <div class="board__up"></div>
+                <div class="board__down"></div>
+              </div>
+              <div class="board">
+                <div class="board__up"></div>
+                <div class="board__down"></div>
+              </div>
+              <div class="board">
+                <div class="board__up"></div>
+                <div class="board__down"></div>
+              </div>
           </div>
 
           <div class="tree">
+            <div class="branch"></div>
+            <div class="branch"></div>
+            <div class="branch"></div>
+            <div class="trunk"></div>
           </div>
       </div>
 
