--- a/index.html
+++ b/index.html
@@ -77,33 +77,37 @@
         <section class="media">
             <div class="container ">
                 <div class="media__box">
-                    <div class="media__box1">
-                        <h2 class="media__header title4">Social Media</h2>
-                        <p class="media__text title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+                    <div class="row">
+                        <div class="media__box1 col-xl-5 col-12">
+                            <h2 class="media__header title4">Social Media</h2>
+                            <p class="media__text title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
+                        </div>
+                        <div class="col-7">
+                            <ul class="media__list">
+                                <li class="media__item">
+                                    <img src="./image/fasebook.svg" alt="facebook">
+                                </li>
+                                <li class="media__item">
+                                    <img src="./image/twitter.svg" alt="twitter">
+                                </li>
+                                <li class="media__item">
+                                    <img src="./image/linkedin.svg" alt="linkedin">
+                                </li>
+                                <li class="media__item">
+                                    <img src="./image/pinterest.svg" alt="pinterest">
+                                </li>
+                                <li class="media__item">
+                                    <img src="./image/instagram.svg" alt="instagram">
+                                </li>
+                                <li class="media__item">
+                                <img src="./image/github.svg" alt="github">
+                                </li>
+                                <li class="media__item">
+                                    <img src="./image/rss.svg" alt="rss">
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <ul class="media__list">
-                        <li class="media__item">
-                            <img src="./image/fasebook.svg" alt="facebook">
-                        </li>
-                        <li class="media__item">
-                            <img src="./image/twitter.svg" alt="twitter">
-                        </li>
-                        <li class="media__item">
-                            <img src="./image/linkedin.svg" alt="linkedin">
-                        </li>
-                        <li class="media__item">
-                            <img src="./image/pinterest.svg" alt="pinterest">
-                        </li>
-                        <li class="media__item">
-                            <img src="./image/instagram.svg" alt="instagram">
-                        </li>
-                        <li class="media__item">
-                        <img src="./image/github.svg" alt="github">
-                        </li>
-                        <li class="media__item">
-                            <img src="./image/rss.svg" alt="rss">
-                        </li>
-                    </ul>
                 </div>
             </div>
         </section>
