finish with iconfont

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/bootstrap-grid.css">
+    <link rel="stylesheet" href="./iconfont/iconfont.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/responsiv.css">
     </head>
@@ -34,11 +35,8 @@
                         <a class="menu__link" href="#contact">Contact</a>
                     </li>
                 </ul>
-                <div class="menu__mobil">
-                    <a href="#menu">
-                        <img src="./image/menu-mobil.svg" alt="menu">
-                    </a>
-                </div>
+                <button class="menu__mobil icon-mobil_menu">
+                </button>
             </nav>
         </div>
     </header>
@@ -97,25 +95,25 @@
                         <div class="col-lg-7">
                             <ul class="media__list">
                                 <li class="media__item">
-                                    <img src="./image/fasebook.svg" alt="facebook">
+                                    <a class="icon-facebook media__item-link" href=""></a>
                                 </li>
                                 <li class="media__item">
-                                    <img src="./image/twitter.svg" alt="twitter">
+                                    <a class="icon-twitter  media__item-link" href=""></a>
                                 </li>
                                 <li class="media__item">
-                                    <img src="./image/linkedin.svg" alt="linkedin">
+                                    <a class="icon-linkedin  media__item-link" href=""></a>
                                 </li>
                                 <li class="media__item">
-                                    <img src="./image/pinterest.svg" alt="pinterest">
+                                    <a class="icon-pinterest  media__item-link" href=""></a>
                                 </li>
                                 <li class="media__item">
-                                    <img src="./image/instagram.svg" alt="instagram">
+                                    <a class="icon-instagram  media__item-link" href=""></a>
                                 </li>
                                 <li class="media__item">
-                                <img src="./image/github.svg" alt="github">
+                                    <a class="icon-github  media__item-link" href=""></a>
                                 </li>
                                 <li class="media__item">
-                                    <img src="./image/rss.svg" alt="rss">
+                                    <a class="icon-rss  media__item-link" href=""></a>
                                 </li>
                             </ul>
                         </div>
@@ -383,25 +381,25 @@
         <div class="footer__box container">
             <ul class="footer__list">
                 <li>
-                    <img src="image/fasebook.svg" alt="facebook">
+                    <a class="icon-facebook footer__list-item" href=""></a>
                 </li>
                 <li>
-                    <img src="image/twitter.svg" alt="twitter">
+                    <a class="icon-twitter  footer__list-item" href=""></a>
                 </li>
                 <li>
-                    <img src="image/linkedin.svg" alt="linkedin">
+                    <a class="icon-linkedin  footer__list-item" href=""></a>
                 </li>
                 <li>
-                    <img src="image/pinterest.svg" alt="pinterest">
+                    <a class="icon-pinterest  footer__list-item" href=""></a>
                 </li>
                 <li>
-                    <img src="image/instagram.svg" alt="instagram">
+                    <a class="icon-instagram  footer__list-item" href=""></a>
                 </li>
                 <li>
-                    <img src="image/github.svg" alt="github">
+                    <a class="icon-github  footer__list-item" href=""></a>
                 </li>
                 <li>
-                    <img src="image/rss.svg" alt="rss">
+                    <a class="icon-rss  footer__list-item" href=""></a>
                 </li>
             </ul>
             <div class="footer__discr">© 2015 Axure Themes</div>
